# tic_tc_toe_enf2122

./: pyproject.toml
qmsspkg/: pyproject.toml  tictactoe.py
qmsspkg/tests/: test_tictactoe.py
